syntax = "proto3";

import "messages/EventPredictions.proto";

package stats.service.dashboard;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.stats.service.dashboard";

service RecommendationsController {
  rpc GetRecommendationsForUser (message.event_recommendations.UserPredictionsRequestProto)
      returns (stream stats.message.event_recommendations.RecommendedEventProto);

  rpc GetSimilarEvents (message.event_recommendations.SimilarEventsRequestProto)
      returns (stream stats.message.event_recommendations.RecommendedEventProto);

  rpc GetInteractionsCount (message.event_recommendations.InteractionsCountRequestProto)
      returns (stream stats.message.event_recommendations.RecommendedEventProto);
}