syntax = "proto3";

import "messages/UserAction.proto";
import "google/protobuf/empty.proto";

package service.collector;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.message.collector";

service UserActionController {
  rpc CollectUserAction (message.action.UserActionProto)
      returns (google.protobuf.Empty);
}